hphp/test/slow/object/const/redeclare-from-const.php.expectf
Fatal error: Cannot redeclare property p of class C with different constness in class D in %s/redeclare-from-const.php on line 4
